force-app/main/default/objects/Case/recordTypes/Absence.recordType-meta.xml
<RecordType>
    <fullName>Absence</fullName>
    <active>true</active>
    <businessProcess>Absent Notices</businessProcess>
    <label>Absence</label>
</RecordType>